fixed overflow

--- a/public/src/css/base/_typography.scss
+++ b/public/src/css/base/_typography.scss
@@ -3,7 +3,9 @@ html, body {
   color: $black-2;
   font-size: 20px;
 }
-
+body {
+	overflow-x: hidden;
+}
 body, input, select, textarea, button, a {
    font-family: $work-sans;
    font-weight: 300;
